# learn-vulkan

./: .gitignore  CMakeLists.txt  README.md
shaders/: triangle.vert
src/: main.c  triangle.fs
